created Swagger API and finished modifying controllers.
